<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="543dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@color/black"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/enter_value"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/allclear"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="clear"
                android:text="@string/ac"
                android:textColor="#E30C0C"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/bracket"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="bracket"
                android:text="@string/bracket"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/back"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="back"
                android:text="@string/clear"
                android:textColor="#E30C0C"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divide"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:background="@drawable/custom_btn"
                android:onClick="divide"
                android:text="@string/divide"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="seven"
                android:text="@string/seven"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/eight"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="eight"
                android:text="@string/eight"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/nine"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="nine"
                android:text="@string/nine"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:background="@drawable/custom_btn"
                android:onClick="multiply"
                android:text="@string/multiply"
                android:textSize="25sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="four"
                android:text="@string/four"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/five"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="five"
                android:text="@string/five"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/six"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="six"
                android:text="@string/six"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minus"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:background="@drawable/custom_btn"
                android:onClick="minus"
                android:text="@string/minus"
                android:textSize="35sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="one"
                android:text="@string/one"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/two"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="two"
                android:text="@string/two"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/three"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="three"
                android:text="@string/three"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/plus"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:background="@drawable/custom_btn"
                android:onClick="plus"
                android:text="@string/plus"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pow"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="power"
                android:text="@string/power"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/zero"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="zero"
                android:text="@string/zero"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/point"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/custom_btn"
                android:onClick="point"
                android:text="@string/point"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equal"
                android:layout_width="90dp"
                android:layout_height="60dp"
                android:background="@drawable/custom_btn"
                android:onClick="equal"
                android:text="@string/equal"
                android:textColor="#24CD2A"
                android:textSize="30sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>